added initial blocks and elements structure

--- a/lesson-2/index.html
+++ b/lesson-2/index.html
@@ -5,5 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="awesome-section">
+      <div class="container">
+        <h2 class="awesome-section__title"></h2>
+        <div class="awesome-section__divider"></div>
+        <h3 class="awesome-section__subtitle"></h3>
+        <div class="awesome-section__cards-container">
+          <div class="awesome-section__card">
+            <div class="awesome-section__card-icon"></div>
+            <h4 class="awesome-section__card-title"></h4>
+            <p class="awesome-section__card-text"></p>
+          </div>
+          <div class="awesome-section__card">
+            <div class="awesome-section__card-icon"></div>
+            <h4 class="awesome-section__card-title"></h4>
+            <p class="awesome-section__card-text"></p>
+          </div>
+          <div class="awesome-section__card">
+            <div class="awesome-section__card-icon"></div>
+            <h4 class="awesome-section__card-title"></h4>
+            <p class="awesome-section__card-text"></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
