added text and styles for awesome-section__title

--- a/lesson-2/index.html
+++ b/lesson-2/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="awesome-section">
       <div class="container">
-        <h2 class="awesome-section__title"></h2>
+        <h2 class="awesome-section__title">Why this is awesome</h2>
         <div class="awesome-section__divider"></div>
         <h3 class="awesome-section__subtitle"></h3>
         <div class="awesome-section__cards-container">
