added style for awesome-section__subtitle

--- a/lesson-2/index.html
+++ b/lesson-2/index.html
@@ -11,7 +11,9 @@
       <div class="awesome-section">
         <h2 class="awesome-section__title">Why this is awesome</h2>
         <div class="awesome-section__divider"></div>
-        <h3 class="awesome-section__subtitle"></h3>
+        <h3 class="awesome-section__subtitle">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        </h3>
         <div class="awesome-section__cards-container">
           <div class="awesome-section__card">
             <div class="awesome-section__card-icon"></div>
