added style for awesome-section__card-icon and its modifiers

--- a/lesson-2/index.html
+++ b/lesson-2/index.html
@@ -16,17 +16,23 @@
         </h3>
         <div class="awesome-section__cards-container">
           <div class="awesome-section__card">
-            <div class="awesome-section__card-icon"></div>
+            <div
+              class="awesome-section__card-icon awesome-section__card-icon_img_lightbulb"
+            ></div>
             <h4 class="awesome-section__card-title"></h4>
             <p class="awesome-section__card-text"></p>
           </div>
           <div class="awesome-section__card">
-            <div class="awesome-section__card-icon"></div>
+            <div
+              class="awesome-section__card-icon awesome-section__card-icon_img_keyboard"
+            ></div>
             <h4 class="awesome-section__card-title"></h4>
             <p class="awesome-section__card-text"></p>
           </div>
           <div class="awesome-section__card">
-            <div class="awesome-section__card-icon"></div>
+            <div
+              class="awesome-section__card-icon awesome-section__card-icon_img_lightning"
+            ></div>
             <h4 class="awesome-section__card-title"></h4>
             <p class="awesome-section__card-text"></p>
           </div>
