--- a/lesson-2/index.html
+++ b/lesson-2/index.html
@@ -19,22 +19,34 @@
             <div
               class="awesome-section__card-icon awesome-section__card-icon_img_lightbulb"
             ></div>
-            <h4 class="awesome-section__card-title"></h4>
-            <p class="awesome-section__card-text"></p>
+            <h4 class="awesome-section__card-title">Thoughtful Design</h4>
+            <p class="awesome-section__card-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+              euismod bibendum laoreet. Proin gravida dolor sit amet lacus
+              accumsan et viverra.
+            </p>
           </div>
           <div class="awesome-section__card">
             <div
               class="awesome-section__card-icon awesome-section__card-icon_img_keyboard"
             ></div>
-            <h4 class="awesome-section__card-title"></h4>
-            <p class="awesome-section__card-text"></p>
+            <h4 class="awesome-section__card-title">Well Crafted</h4>
+            <p class="awesome-section__card-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+              euismod bibendum laoreet. Proin gravida dolor sit amet lacus
+              accumsan et viverra.
+            </p>
           </div>
           <div class="awesome-section__card">
             <div
               class="awesome-section__card-icon awesome-section__card-icon_img_lightning"
             ></div>
-            <h4 class="awesome-section__card-title"></h4>
-            <p class="awesome-section__card-text"></p>
+            <h4 class="awesome-section__card-title">Easy to Customize</h4>
+            <p class="awesome-section__card-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+              euismod bibendum laoreet. Proin gravida dolor sit amet lacus
+              accumsan et viverra.
+            </p>
           </div>
         </div>
       </div>
