fixed the code review comments from Alexander

--- a/lesson-2/index.html
+++ b/lesson-2/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="awesome-section">
+    <section class="awesome-section">
+      <div class="container">
         <h2 class="awesome-section__title">Why this is awesome</h2>
         <div class="awesome-section__divider"></div>
         <h3 class="awesome-section__subtitle">
@@ -16,9 +16,13 @@
         </h3>
         <div class="awesome-section__cards-container">
           <div class="awesome-section__card">
-            <div
-              class="awesome-section__card-icon awesome-section__card-icon_img_lightbulb"
-            ></div>
+            <div class="awesome-section__card-icon">
+              <img
+                src="img/lightbulb.png"
+                alt="Electric lightbulub"
+                class="awesome-section__card-icon-img"
+              />
+            </div>
             <h4 class="awesome-section__card-title">Thoughtful Design</h4>
             <p class="awesome-section__card-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
@@ -27,9 +31,13 @@
             </p>
           </div>
           <div class="awesome-section__card">
-            <div
-              class="awesome-section__card-icon awesome-section__card-icon_img_keyboard"
-            ></div>
+            <div class="awesome-section__card-icon">
+              <img
+                src="img/keyboard.png"
+                alt="Computer keyboard"
+                class="awesome-section__card-icon-img"
+              />
+            </div>
             <h4 class="awesome-section__card-title">Well Crafted</h4>
             <p class="awesome-section__card-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
@@ -38,9 +46,13 @@
             </p>
           </div>
           <div class="awesome-section__card">
-            <div
-              class="awesome-section__card-icon awesome-section__card-icon_img_lightning"
-            ></div>
+            <div class="awesome-section__card-icon">
+              <img
+                src="img/lightning.png"
+                alt="Lightning bolt"
+                class="awesome-section__card-icon-img"
+              />
+            </div>
             <h4 class="awesome-section__card-title">Easy to Customize</h4>
             <p class="awesome-section__card-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
@@ -50,6 +62,6 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
   </body>
 </html>
