--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -9,9 +9,9 @@
   <body>
     <section class="awesome-section">
       <div class="container">
-        <h2 class="awesome-section__title">Why this is awesome</h2>
+        <h2 class="awesome-section__title title">Why this is awesome</h2>
         <div class="awesome-section__divider"></div>
-        <h3 class="awesome-section__subtitle">
+        <h3 class="awesome-section__subtitle subtitle">
           Lorem ipsum dolor sit amet consectetur adipisicing elit.
         </h3>
         <div class="awesome-section__cards-container">
