added HTML for the Pricing section

--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -10,56 +10,86 @@
     <section class="awesome-section">
       <div class="container">
         <h2 class="awesome-section__title title">Why this is awesome</h2>
-        <div class="awesome-section__divider"></div>
-        <h3 class="awesome-section__subtitle subtitle">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        </h3>
+        <div class="divider"></div>
+        <h3 class="awesome-section__subtitle subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
         <div class="awesome-section__cards-container">
           <div class="awesome-section__card">
             <div class="awesome-section__card-icon">
-              <img
-                src="img/lightbulb.png"
-                alt="Electric lightbulub"
-                class="awesome-section__card-icon-img"
-              />
+              <img src="img/lightbulb.png" alt="Electric lightbulub" class="awesome-section__card-icon-img" />
             </div>
             <h4 class="awesome-section__card-title">Thoughtful Design</h4>
             <p class="awesome-section__card-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
-              euismod bibendum laoreet. Proin gravida dolor sit amet lacus
-              accumsan et viverra.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida
+              dolor sit amet lacus accumsan et viverra.
             </p>
           </div>
           <div class="awesome-section__card">
             <div class="awesome-section__card-icon">
-              <img
-                src="img/keyboard.png"
-                alt="Computer keyboard"
-                class="awesome-section__card-icon-img"
-              />
+              <img src="img/keyboard.png" alt="Computer keyboard" class="awesome-section__card-icon-img" />
             </div>
             <h4 class="awesome-section__card-title">Well Crafted</h4>
             <p class="awesome-section__card-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
-              euismod bibendum laoreet. Proin gravida dolor sit amet lacus
-              accumsan et viverra.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida
+              dolor sit amet lacus accumsan et viverra.
             </p>
           </div>
           <div class="awesome-section__card">
             <div class="awesome-section__card-icon">
-              <img
-                src="img/lightning.png"
-                alt="Lightning bolt"
-                class="awesome-section__card-icon-img"
-              />
+              <img src="img/lightning.png" alt="Lightning bolt" class="awesome-section__card-icon-img" />
             </div>
             <h4 class="awesome-section__card-title">Easy to Customize</h4>
             <p class="awesome-section__card-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
-              euismod bibendum laoreet. Proin gravida dolor sit amet lacus
-              accumsan et viverra.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida
+              dolor sit amet lacus accumsan et viverra.
             </p>
           </div>
+        </div>
+      </div>
+    </section>
+    <section class="pricing">
+      <div class="container">
+        <h2 class="title">Pricing options</h2>
+        <div class="divider"></div>
+        <h3 class="subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+        <div class="pricing__plans-container">
+          <ul class="pricing__plan">
+            <li class="pricing__plan-item">Basic</li>
+            <li class="pricing__plan-item">
+              <span class="pricing__currency">$</span><span class="pricing__price">10</span>
+            </li>
+            <li class="pricing__plan-item">Free for life</li>
+            <li class="pricing__plan-item">1 gb of space</li>
+            <li class="pricing__plan-item">1 gb of space</li>
+            <li class="pricing__plan-item">1 gb of space</li>
+            <li class="pricing__plan-item">1 gb of space</li>
+            <li class="pricing__plan-item">1 gb of space</li>
+            <li class="pricing__plan-item">1 gb of space</li>
+          </ul>
+          <ul class="pricing__plan">
+            <li class="pricing__plan-item">Optima</li>
+            <li class="pricing__plan-item">
+              <span class="pricing__currency">$</span><span class="pricing__price">20</span>
+            </li>
+            <li class="pricing__plan-item">Free for life</li>
+            <li class="pricing__plan-item">1 gb of space</li>
+            <li class="pricing__plan-item">1 gb of space</li>
+            <li class="pricing__plan-item">1 gb of space</li>
+            <li class="pricing__plan-item">1 gb of space</li>
+            <li class="pricing__plan-item">1 gb of space</li>
+            <li class="pricing__plan-item">1 gb of space</li>
+          </ul>
+          <ul class="pricing__plan">
+            <li class="pricing__plan-item">Pro</li>
+            <span class="pricing__currency">$</span
+            ><span class="pricing__price">30</span>
+            <li class="pricing__plan-item">Free for life</li>
+            <li class="pricing__plan-item">1 gb of space</li>
+            <li class="pricing__plan-item">1 gb of space</li>
+            <li class="pricing__plan-item">1 gb of space</li>
+            <li class="pricing__plan-item">1 gb of space</li>
+            <li class="pricing__plan-item">1 gb of space</li>
+            <li class="pricing__plan-item">1 gb of space</li>
+          </ul>
         </div>
       </div>
     </section>
