added styles for title and subtitle in the Pricing section

--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -48,9 +48,9 @@
     </section>
     <section class="pricing">
       <div class="container">
-        <h2 class="title">Pricing options</h2>
+        <h2 class="pricing__title title">Pricing options</h2>
         <div class="divider"></div>
-        <h3 class="subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+        <h3 class="pricing__subtitle subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
         <div class="pricing__plans-container">
           <ul class="pricing__plan">
             <li class="pricing__plan-item">Basic</li>
