added styles for pricing__plan

--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -53,11 +53,11 @@
         <h3 class="pricing__subtitle subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
         <div class="pricing__plans-container">
           <ul class="pricing__plan">
-            <li class="pricing__plan-item">Basic</li>
-            <li class="pricing__plan-item">
+            <li class="pricing__plan-title">Basic</li>
+            <li class="pricing__plan-price">
               <span class="pricing__currency">$</span><span class="pricing__price">10</span>
             </li>
-            <li class="pricing__plan-item">Free for life</li>
+            <li class="pricing__plan-subtitle">Free for life</li>
             <li class="pricing__plan-item">1 gb of space</li>
             <li class="pricing__plan-item">1 gb of space</li>
             <li class="pricing__plan-item">1 gb of space</li>
@@ -66,11 +66,11 @@
             <li class="pricing__plan-item">1 gb of space</li>
           </ul>
           <ul class="pricing__plan">
-            <li class="pricing__plan-item">Optima</li>
-            <li class="pricing__plan-item">
+            <li class="pricing__plan-title">Optima</li>
+            <li class="pricing__plan-price">
               <span class="pricing__currency">$</span><span class="pricing__price">20</span>
             </li>
-            <li class="pricing__plan-item">Free for life</li>
+            <li class="pricing__plan-subtitle pricing__plan-subtitle_highlighted">Free for life</li>
             <li class="pricing__plan-item">1 gb of space</li>
             <li class="pricing__plan-item">1 gb of space</li>
             <li class="pricing__plan-item">1 gb of space</li>
@@ -79,10 +79,11 @@
             <li class="pricing__plan-item">1 gb of space</li>
           </ul>
           <ul class="pricing__plan">
-            <li class="pricing__plan-item">Pro</li>
-            <span class="pricing__currency">$</span
-            ><span class="pricing__price">30</span>
-            <li class="pricing__plan-item">Free for life</li>
+            <li class="pricing__plan-title">Pro</li>
+            <li class="pricing__plan-price">
+              <span class="pricing__currency">$</span><span class="pricing__price">30</span>
+            </li>
+            <li class="pricing__plan-subtitle">Free for life</li>
             <li class="pricing__plan-item">1 gb of space</li>
             <li class="pricing__plan-item">1 gb of space</li>
             <li class="pricing__plan-item">1 gb of space</li>
