added bottom margin for pricing__plan

--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -7,38 +7,38 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <section class="awesome-section">
+    <section class="awesome">
       <div class="container">
-        <h2 class="awesome-section__title title">Why this is awesome</h2>
+        <h2 class="awesome__title title">Why this is awesome</h2>
         <div class="divider"></div>
-        <h3 class="awesome-section__subtitle subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-        <div class="awesome-section__cards-container">
-          <div class="awesome-section__card">
-            <div class="awesome-section__card-icon">
-              <img src="img/lightbulb.png" alt="Electric lightbulub" class="awesome-section__card-icon-img" />
+        <h3 class="awesome__subtitle subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+        <div class="awesome__cards-container">
+          <div class="awesome__card">
+            <div class="awesome__card-icon">
+              <img src="img/lightbulb.png" alt="Electric lightbulub" class="awesome__card-icon-img" />
             </div>
-            <h4 class="awesome-section__card-title">Thoughtful Design</h4>
-            <p class="awesome-section__card-text">
+            <h4 class="awesome__card-title">Thoughtful Design</h4>
+            <p class="awesome__card-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida
               dolor sit amet lacus accumsan et viverra.
             </p>
           </div>
-          <div class="awesome-section__card">
-            <div class="awesome-section__card-icon">
-              <img src="img/keyboard.png" alt="Computer keyboard" class="awesome-section__card-icon-img" />
+          <div class="awesome__card">
+            <div class="awesome__card-icon">
+              <img src="img/keyboard.png" alt="Computer keyboard" class="awesome__card-icon-img" />
             </div>
-            <h4 class="awesome-section__card-title">Well Crafted</h4>
-            <p class="awesome-section__card-text">
+            <h4 class="awesome__card-title">Well Crafted</h4>
+            <p class="awesome__card-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida
               dolor sit amet lacus accumsan et viverra.
             </p>
           </div>
-          <div class="awesome-section__card">
-            <div class="awesome-section__card-icon">
-              <img src="img/lightning.png" alt="Lightning bolt" class="awesome-section__card-icon-img" />
+          <div class="awesome__card">
+            <div class="awesome__card-icon">
+              <img src="img/lightning.png" alt="Lightning bolt" class="awesome__card-icon-img" />
             </div>
-            <h4 class="awesome-section__card-title">Easy to Customize</h4>
-            <p class="awesome-section__card-text">
+            <h4 class="awesome__card-title">Easy to Customize</h4>
+            <p class="awesome__card-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida
               dolor sit amet lacus accumsan et viverra.
             </p>
