added customers section

--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -10,11 +10,11 @@
     <section class="awesome">
       <div class="container">
         <h2 class="awesome__title title">Why this is awesome</h2>
-        <h3 class="awesome__subtitle subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+        <h3 class="awesome__subtitle subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
         <div class="awesome__cards-container">
           <div class="awesome__card">
             <div class="awesome__card-icon">
-              <img src="img/lightbulb.png" alt="Electric lightbulub" class="awesome__card-icon-img" />
+              <img src="img/icons/lightbulb.png" alt="Electric lightbulub" class="awesome__card-icon-img" />
             </div>
             <h4 class="awesome__card-title">Thoughtful Design</h4>
             <p class="awesome__card-text">
@@ -24,7 +24,7 @@
           </div>
           <div class="awesome__card">
             <div class="awesome__card-icon">
-              <img src="img/keyboard.png" alt="Computer keyboard" class="awesome__card-icon-img" />
+              <img src="img/icons/keyboard.png" alt="Computer keyboard" class="awesome__card-icon-img" />
             </div>
             <h4 class="awesome__card-title">Well Crafted</h4>
             <p class="awesome__card-text">
@@ -34,7 +34,7 @@
           </div>
           <div class="awesome__card">
             <div class="awesome__card-icon">
-              <img src="img/lightning.png" alt="Lightning bolt" class="awesome__card-icon-img" />
+              <img src="img/icons/lightning.png" alt="Lightning bolt" class="awesome__card-icon-img" />
             </div>
             <h4 class="awesome__card-title">Easy to Customize</h4>
             <p class="awesome__card-text">
@@ -89,6 +89,53 @@
             <li class="pricing__plan-item">1 gb of space</li>
             <li class="pricing__plan-item">1 gb of space</li>
           </ul>
+        </div>
+      </div>
+    </section>
+    <section class="customers">
+      <div class="container">
+        <h2 class="customers__title title">what our customers are saying</h2>
+        <h3 class="customers__subtitle subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+        <div class="customers__cards-container">
+          <div class="customers__card">
+            <p class="customers__card-testimonial">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat similique
+              odio aspernatur ex, architecto eaque quo suscipit.
+            </p>
+            <div class="customers__card-customerinfo">
+              <img src="img/photos/jeremy_h.png" alt="Jeremy H. photo" class="customers__card-photo" />
+              <div class="customers__card-credentials">
+                <h4 class="customers__card-name">Jeremy H.</h4>
+                <h5 class="customers__card-position">Manager</h5>
+              </div>
+            </div>
+          </div>
+          <div class="customers__card">
+            <p class="customers__card-testimonial">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat similique
+              odio aspernatur ex, architecto eaque quo suscipit.
+            </p>
+            <div class="customers__card-customerinfo">
+              <img src="img/photos/jeremy_h.png" alt="Jeremy H. photo" class="customers__card-photo" />
+              <div class="customers__card-credentials">
+                <h4 class="customers__card-name">Jeremy H.</h4>
+                <h5 class="customers__card-position">Manager</h5>
+              </div>
+            </div>
+          </div>
+          <div class="customers__card">
+            <p class="customers__card-testimonial">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat similique
+              odio aspernatur ex, architecto eaque quo suscipit.
+            </p>
+            <div class="customers__card-customerinfo">
+              <img src="img/photos/jeremy_h.png" alt="Jeremy H. photo" class="customers__card-photo" />
+              <div class="customers__card-credentials">
+                <h4 class="customers__card-name">Jeremy H.</h4>
+                <h5 class="customers__card-position">Manager</h5>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
