--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -139,5 +139,14 @@
         </div>
       </div>
     </section>
+    <section class="axure">
+      <div class="container">
+        <h2 class="axure__title title">Stylish Axure design</h2>
+        <h3 class="axure__subtitle subtitle">
+          Use the sections you need, remove the ones you don't. Create gorgeous prototypes faster than ever!
+        </h3>
+        <a href="#" class="axure__button">Download</a>
+      </div>
+    </section>
   </body>
 </html>
