corrected notes from Alexander's code review

--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -99,8 +99,9 @@
         <div class="customers__cards-container">
           <div class="customers__card">
             <p class="customers__card-testimonial">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat similique
-              odio aspernatur ex, architecto eaque quo suscipit.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit molestias ad velit veritatis aperiam.
+              Architecto fuga quos blanditiis accusamus doloremque tempore nisi. Earum eaque, esse temporibus tempore
+              provident dolor quos sequi voluptatum quibusdam ipsa est aliquid eveniet nulla aperiam quam?
             </p>
             <div class="customers__card-customerinfo">
               <img src="img/photos/jeremy_h.png" alt="Jeremy H. photo" class="customers__card-photo" />
@@ -125,8 +126,7 @@
           </div>
           <div class="customers__card">
             <p class="customers__card-testimonial">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat similique
-              odio aspernatur ex, architecto eaque quo suscipit.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, aliquam.
             </p>
             <div class="customers__card-customerinfo">
               <img src="img/photos/jeremy_h.png" alt="Jeremy H. photo" class="customers__card-photo" />
@@ -140,7 +140,7 @@
       </div>
     </section>
     <section class="axure">
-      <div class="container">
+      <div class="container axure__container">
         <h2 class="axure__title title">Stylish Axure design</h2>
         <h3 class="axure__subtitle">
           Use the sections you need, remove the ones you don't. Create gorgeous prototypes faster than ever!
